<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_new"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/new_game"/>
    
    <item android:id="@+id/action_share"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"/>
        
    <item android:id="@+id/action_lb"
          android:showAsAction="ifRoom"
          android:icon="@drawable/lb_white"
          android:title="@string/leaderboard" />
    
    <item android:id="@+id/action_achieve"
          android:showAsAction="ifRoom"
          android:icon="@drawable/achieve_white"
          android:title="@string/achievements" />

    <item android:id="@+id/action_rate"
        android:icon="@drawable/ic_action_good"
        android:showAsAction="ifRoom"
        android:title="@string/rate"/>
</menu>